--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,40 @@
 /*  your css code here. If applicable */
+:root{
+	background-color : rgb(135, 206, 235) !important;
+	margin : 0;
+	padding : 0;
+}
+	p:first-child{
+		color : white;
+		background-color : #000;
+	}
+p:nth-child(2){
+	color : black;
+}
+		p:last-child{
+			color: red;
+		}
+
+		li{
+			background-color : gray;
+			width : 50%;
+			padding : 10px;
+		}
+
+	li:first-child, li:last-child{
+		font-size : 22px !important;
+	}
+		li:nth-child(odd){
+			background-color : white;
+		}
+	li:nth-child(3){
+		background-color : pink;
+	}
+
+
+
+
+
+
+
+		
